Fixed font issue, and made site look good on mobile

--- a/css/ver_2.css
+++ b/css/ver_2.css
@@ -3,7 +3,7 @@
 	--big_hr_padding: -2%;
 	--secondary: rgb(24, 24, 24);
 	--main_block_color: rgb(36, 36, 36);
-	--font: "Segoe UI";
+	--font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 body {
 	background-color: black;
@@ -21,23 +21,18 @@ a:hover {
 }
 .extern_links {
 	font-size: 16pt;
-	margin-left: 100px;
-	margin-top: 50px;
 	display: flex;
+	flex-flow: column;
 	align-items: center;
-	gap: 20px;
+	gap: 10px;
 	line-height: 30px;
 }
 .standard_block {
-	margin: 150px;
 	margin-top: 75px;
 	margin-bottom: 100px;
 	font-size: 14pt;
 	line-height: 30px;
 	max-width: 755px;
-}
-.wide {
-	max-width: 1200px;
 }
 .subblock {
 	margin: 50px;
@@ -46,6 +41,53 @@ a:hover {
 	line-height: 30px;
 	max-width: 900px;
 	color: rgb(194, 194, 194);
+}
+.aligner {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	text-align: center;
+}
+.wide {
+	margin-top: -30px;
+}
+@media (min-width: 767px) {
+	.extern_links {
+		font-size: 16pt;
+		margin-left: 100px;
+		margin-top: 50px;
+		display: flex;
+		flex-flow: row;
+		align-items: center;
+		gap: 20px;
+		line-height: 30px;
+	}
+	.standard_block {
+		margin: 150px;
+		margin-top: 75px;
+		margin-bottom: 100px;
+		font-size: 14pt;
+		line-height: 30px;
+		max-width: 755px;
+	}
+	.wide {
+		margin-top: -30px;
+		max-width: 1200px;
+	}
+	.subblock {
+		margin: 50px;
+		margin-bottom: 10px;
+		font-size: 14pt;
+		line-height: 30px;
+		max-width: 900px;
+		color: rgb(194, 194, 194);
+	}
+	.aligner {
+		display: flex;
+		flex-flow: row;
+		align-items: center;
+		text-align: left;
+	}
 }
 h2 {
 	color: white;
@@ -71,11 +113,6 @@ li {
 .subblock_categories
 {
 	text-decoration: underline;
-}
-.aligner {
-	display: flex;
-	flex-flow: row;
-	align-items: center;
 }
 .li_el {
 	display: flex;
